--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -5,39 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - SkillSwap</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @keyframes fadeInIp {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        .animate-fade-in-up {
-            animation: fadeInIp 0.5s ease-out forwards;
-        }
-    </style>
+    <link rel="stylesheet" href="gradient-theme.css">
 </head>
-<body class="bg-gray-50 min-h-screen font-sans">
+<body class="gradient-bg animate-gradient-flow min-h-screen font-sans">
 
     <!-- Navbar -->
-    <nav class="bg-white border-b border-gray-200 sticky top-0 z-50">
+    <nav class="bg-glass sticky top-0 z-50 border-b border-white/10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex-shrink-0 flex items-center gap-8">
-                    <a href="index.html" class="text-xl font-bold text-blue-600">
-                        SkillSwap
+                    <a href="splash.html" class="text-xl font-bold text-white font-bluesakura">
+                        SKiLlSWaP
                     </a>
                     <div class="hidden sm:flex space-x-4">
-                        <a href="discover.html" class="text-gray-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">
+                        <hr href="discover.html" class="nav-link px-3 py-2 rounded-md text-sm font-medium">
                             Discover
                         </a>
-                        <a href="index.html#features" class="text-gray-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">
+                        <a href="index.html#features" class="nav-link px-3 py-2 rounded-md text-sm font-medium">
                             Features
                         </a>
-                        <a href="index.html#about" class="text-gray-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">
+                        <a href="index.html#about" class="nav-link px-3 py-2 rounded-md text-sm font-medium">
                             About
                         </a>
                     </div>
                 </div>
-                <div class="flex items-center space-x-4">
+                <div class="max-w-md w-full space-y-8 bg-glass p-8 rounded-2xl shadow-xl animate-fade-in-up border border-white/20">
                     <a href="login.html" class="text-gray-500 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">
                         Log in
                     </a>
@@ -52,15 +44,15 @@
     <div class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md w-full space-y-8 bg-white p-8 rounded-2xl shadow-xl animate-fade-in-up">
             <div>
-                <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+                <h2 class="mt-6 text-center text-3xl font-extrabold gradient-text-white">
                     Create your account
                 </h2>
                 <p class="mt-2 text-center text-sm text-gray-600">
                     Join the community of learners and teachers
                 </p>
             </div>
-            <form class="mt-8 space-y-6" id="signupForm">
-                <div class="rounded-md shadow-sm space-y-4">
+            <form class="input-gradient w-full" id="signupForm">
+                <div class="input-gradient w-full">
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
                         <input
@@ -115,7 +107,7 @@
                 </div>
 
                 <div>
-                    <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white gradient-button">
                         Sign up
                     </button>
                 </div>
